# ussd_blood_bank

./: .env.example  .gitignore  pyproject.toml  requirements.txt
app/blood_bank/: admin.py  constants.py  models.py  service.py  urls.py  utils.py  views.py
app/blood_bank/migrations/: 0001_initial.py
config/gateways/: asgi.py  wsgi.py
config/routes/: urls.py
config/settings/: settings.py
scripts/: migrate_db.sh
