[tool.poetry]
name = "ussd-blood-bank"
version = "0.1.0"
description = "A USSD service for managing blood donation and reception amongst other functionalities for registered hospitals."
authors = ["Tega Ukavwe <justtega97@gmail.com>"]
readme = "README.md"
packages = [{include = "ussd_blood_bank"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.6"
mysqlclient = "^2.1.1"
django-extensions = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
